--- a/cards.org
+++ b/cards.org
@@ -21,5 +21,7 @@
 *** Ludwig Wittgenstein (1880s-1950s) on what the mission of a philsopher is
     "to show the fly the way out of the bottle"
 ** Lecture 2 - Philosophy - Did the Greeks Invent It?
-
+*** What is the etymology of the word /Philosophy/
+    Love of wisdom
+** Lecture 3 - Pythagoras and the Divinity of Number
   
