--- a/cards.org
+++ b/cards.org
@@ -50,5 +50,13 @@
 *** In the Dialogs of Plato, Protagoras says "Man is the measure of all things". What does this mean?
     Perception determines the reality of each person. One person's reality can claim as much ontological validity as any other. The only grounding is the experiences of one's lifetime.
 ** Lecture 5 - The Greek Tragedians on Man's Fate
-***   
-  
+*** What is the plot of Euripedes's Medea?  
+    Medea lears her husband Jason is going to leave her for the princess of Corinth. She takes her revenge by feigning acceptance then poisoning the princess, the king, and her own children, all to cause Jason the most pain.
+*** What is the plot of Sophecles's Antigone?
+    Antigone is a princess and her brothers had just both perished in a civil war leaving Creon in charge. One brother, Polynices's body is left to the element by order of Creon but Antigone insists on burying it herself. She is captured and declares her readiness to die while Creon begs her to let it go. He explains how both her brothers were petty gangsters. Still Antigone's sister now insists on burying Polynices and Creon has Antigone executed.
+*** What is /nomos/? 
+    That which is customary, lawful by the very laws of nature. Can be thought of as duty or destiny as well. 
+*** What is the Greek Tragedian's relation between destiny and passion?
+    Once you are in the realm of passion beyond reason things must necessarily play out like they will.
+** Lecture 6 - Herodotus and the Lamp of History
+***  
