--- a/cards.org
+++ b/cards.org
@@ -59,4 +59,15 @@
 *** What is the Greek Tragedian's relation between destiny and passion?
     Once you are in the realm of passion beyond reason things must necessarily play out like they will.
 ** Lecture 6 - Herodotus and the Lamp of History
+*** Who was Herodotus, what did he write, and when did he live?
+    Living in the 400s BC, Herodotus wrote /The Persian Wars/ and is regarded as the first historian
+*** Herodotus teaches that, to account for events of historic proportions, one must go well beyond ____
+    the mere chronicling of events
+*** What is Herodotus' Lamp of History?
+    History can only teach us if all humans have something deep in common and the lamp of history illuminates the very commonalities that constitute human nature itself
+*** What does Herodotus tell us Solon answered Croesus about who the happiest man in the world is?
+    Cleobis and Biton - two teenage brothers who pulled their mother's cart to Hera's temple then fell asleep and died. They fulfilled their duty and died in bliss. They died Eudaimonios.
+*** What does "Past is Prologue" mean?
+    A quotation from Sheakspeare's The Tempest. The idea that history provides the context, setup, and even justification for events that unfold.
+** Lecture 7 - Socrates on the Examined Life
 ***  
