--- a/cards.org
+++ b/cards.org
@@ -70,4 +70,17 @@
 *** What does "Past is Prologue" mean?
     A quotation from Sheakspeare's The Tempest. The idea that history provides the context, setup, and even justification for events that unfold.
 ** Lecture 7 - Socrates on the Examined Life
-***  
+*** What does the Socratic Method aim to do?
+    Ask questions to test the foundations and implications of all our assumptions
+*** What intellectual movement was Socrates an antagonist to?
+    He aimed to discover what is really true and therefore defeat Skepticism
+*** Which two contemporaries wrote about Socrates?
+    Plato and Xenophon
+*** What was Socrates's logic after his trial for drinking hemlock rather then fleeing into exile?
+    He believed that law was how the rational power of corruptible man might minimize corruption. He had devoted his life to rationality and believed it would be abandoning his own teachings on rationality to defy the law.
+*** What is Plato's analogy of the cave?
+    People who are raised chained up in a cave with no other experience but seeing shadow. They believe this is the whole world. If one breaks free, leaves the cave and sees the true source of these shadows they will likely not be believed by their compatriots.
+*** What does "An unexamined life is not worth living" mean?
+    It is not your sequence of experiences that matters but how you integrate them into your narrative of the world and how it works. This act is subject to refinement through self-critical reflection. When we do this, it is what seperates us from animals.
+** Lecture 8 - Plato's Search for Truth
+*** 
